@@ -1,1 +1,13 @@
 # irasuto-javafx
+
+**Keywords:** DHBW, SoftwareEngineering, Irasuto, Puzzle, Irasuto Solver, Backtracking
+
+JavaFX Implementierung eines Solvers für das Rätsel Irasuto
+
+## Technische Sachen
++ Java 11
++ JavaFX Dependencies
+  + In der Build Configuration einfügen: -Djdk.gtk.version=3 --module-path /javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+  +  der GTK Parameter ist nur für Linuxer wichtig
++ JUnit
+
